issue SOR-3, added face size and face position to formula editor commit with failing test cases